--- a/Engine/Source/Programs/UnsyncUI/UnsyncUI/BuildSelectorControl.xaml
+++ b/Engine/Source/Programs/UnsyncUI/UnsyncUI/BuildSelectorControl.xaml
@@ -57,6 +57,7 @@
 					<ListView.ContextMenu>
 						<ContextMenu>
 							<MenuItem Header="Copy Build CL" Command="{Binding CopyBuildCLClicked}" />
+							<MenuItem Header="Copy Build Name" Command="{Binding CopyBuildNameClicked}" />
 							<MenuItem Header="Open Build Location" Command="{Binding OpenBuildLocationClicked}" />
 						</ContextMenu>
 					</ListView.ContextMenu>
@@ -151,12 +152,29 @@
 					</TextBlock>
 					<TextBlock Margin="4" Visibility="{Binding Path=ResetDestinationClicked.Enabled, Converter={StaticResource VisConv_Collapsed}}">
 						<Run Text="Destination - "/>
-					<Hyperlink Command="{Binding ResetDestinationClicked}">Reset</Hyperlink>
+						<Hyperlink Command="{Binding ResetDestinationClicked}">Reset</Hyperlink>
 					</TextBlock>
 				</Grid>
 			</GroupBox.Header>
 
-			<local:SelectFolderControl SelectedPath="{Binding DstPath, UpdateSourceTrigger=PropertyChanged}" Description="Select a destination directory to sync builds to."/>
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="auto"/>
+					<RowDefinition Height="auto"/>
+					<RowDefinition Height="auto"/>
+				</Grid.RowDefinitions>
+
+				<local:SelectFolderControl Grid.Row ="0" SelectedPath="{Binding DstPath, UpdateSourceTrigger=PropertyChanged}" Description="Select a destination directory to sync builds to."/>
+
+				<CheckBox Grid.Row ="1" VerticalAlignment="Center" IsChecked="{Binding AppendBuildName}" 
+						  Content="Append Build Name" ToolTip="If a build is selected, its name will be appended to the destination folder." 
+						  ToolTipService.ShowOnDisabled="True" HorizontalAlignment="Left" Margin="4,0,0,0"/>
+				<TextBlock Margin="4" Grid.Row ="2">
+					<Hyperlink Command="{Binding OpenDestinationClicked}">
+						<TextBlock Text="{Binding FinalDstPath, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
+					</Hyperlink>
+				</TextBlock>
+			</Grid>
 		</GroupBox>
 
 		<!-- Start sync -->
